objects/nFORCE__Step__c.object
<CustomObject>
    <description>This object indicates the individual business process, called a step, that the system runs as part of a workflow.</description>
    <fields>
        <fullName>nFORCE__Key__c</fullName>
        <description>The user manually populates this unique text field to provide an identifier for step identification purposes. By default, this field is blank.</description>
        <inlineHelpText>Enter a unique name in this field. Use this field to easily identify the step as you continue the workflow configuration process.</inlineHelpText>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>nFORCE__Step_Definition__c</fullName>
        <description>The user manually populates this text field to capture the unique name of the flow or class which defines the functionality a step performs. By default, this field is blank.</description>
        <inlineHelpText>Enter the unique name of the flow or class that defines this step&apos;s behavior.</inlineHelpText>
        <label>Definition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Type__c</fullName>
        <description>The user manually populates this picklist field to indicate how the system implements the step in the workflow. Some possible options include Apex and Flow.</description>
        <inlineHelpText>Select the desired type for your step.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apex</fullName>
                </value>
                <value>
                    <fullName>Flow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nFORCE__lookupKey__c</fullName>
        <description>The system automatically populates this lookup field to indicate the External ID for the step object.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field contains the step&apos;s External ID.</inlineHelpText>
        <label>Lookup Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Step</label>
    <listViews>
        <fullName>nFORCE__All_Steps</fullName>
        <columns>NAME</columns>
        <columns>nFORCE__Key__c</columns>
        <columns>nFORCE__Type__c</columns>
        <columns>nFORCE__Step_Definition__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Steps</label>
    </listViews>
    <nameField>
        <label>Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Steps</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>